--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>dev.java10x</groupId>
-	<artifactId>CadastroDeNinjas</artifactId>
+	<groupId>Emili.Back_Emili</groupId>
+	<artifactId>BackEmili</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CadastroDeNinjas</name>
-	<description>Uma API para cadastro de ninjas</description>
+	<name>BackEmili</name>
+	<description>Uma API para Controle de usuario com Requisições</description>
 	<url/>
 	<licenses>
 		<license/>
