feat: adiciona funcionalidade de relatorios e dashboard para ser consumido no front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# Token de setup para promoção de usuário via Postman (apenas ambiente de desenvolvimento)
+setup.token=DEV_SETUP_TOKEN
 spring.application.name=BackEmili
 
 
